--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,17 @@
         "sourceMap": true,
         "strict": true,
         "noImplicitAny": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "node_modules/*",
+                "src/types/*"
+            ]
+        }
     },
     "include": [
-        "src/*.ts"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules"
