--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
     "scripts": {
         "start": "npm run serve",
-        "serve": "node ./bin/main.js"
+        "serve": "node ./bin/server.js"
     },
     "dependencies": {
+        "actions-on-google": "^2.5.0",
         "express": "^4.16.4"
+    },
+    "devDependencies": {
+        "@types/actions-on-google": "^1.10.2",
+        "@types/express": "^4.16.0",
+        "@types/node": "^10.12.12",
+        "dialogflow-fulfillment": "^0.6.1"
     }
 }
