--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     },
     "dependencies": {
         "actions-on-google": "^2.5.0",
+        "dialogflow-fulfillment": "^0.6.1",
         "express": "^4.16.4"
     },
     "devDependencies": {
         "@types/actions-on-google": "^1.10.2",
         "@types/express": "^4.16.0",
-        "@types/node": "^10.12.12",
-        "dialogflow-fulfillment": "^0.6.1"
+        "@types/node": "^10.12.12"
     }
 }
