--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     },
     "dependencies": {
         "actions-on-google": "^2.5.0",
+        "botbuilder-linebot-connector": "^2.3.10",
         "botbuilder-mongodb-storage": "0.0.3",
         "dialogflow-fulfillment": "^0.6.1",
         "express": "^4.16.4"
